[integration] Reorder parameters in JMS source so the lambda comes last (#2062)
[jet-cli] Change smart routing (connecting to all cluster members) default to disabled (#2104)
[pipeline-api] For xUsingServiceAsync transforms, reduce the default number of concurrent
               service calls per processor. Before: 256; now: 4. (#2204)


** Hazelcast Jet 4.2 **

1. New Features

2. Enhancements
[integration] Improve Debezium connector usability and production readiness (generic & MySQL versions) [#2142]

** Hazelcast Jet 4.0 **

1. New Features

[pipeline-api] Add support for calling a Python user-defined function within a pipeline [#1870]
[pipeline-api] Enable client to collect the results of a job it submitted through observables [#1729]
[pipeline-api] Add support for user-defined metrics [#1692]
[pipeline-api] Add batched version of async mapping using service (previously context) [#1803, #1929]
[core] Update Jet to use Hazelcast IMDG 4.0 [#1552]
[core] Add support for the creation of Jet blue/green client (enterprise only) [#1658]
[core] Add two-phase commit (2PC) support to snapshot mechanism for end-to-end exactly once processing [#1438]
[core] Add built-in metrics for job-lifecycle and snapshot statistics [#1715]
[jms] JMS Source now supports at-least-once and exactly-once processing [#1804]
[kafka] Add exactly-once support to Kafka and File sinks [#1654, #1655]
[kafka] Add Kafka Connect source [https://github.com/hazelcast/hazelcast-jet-contrib/tree/master/kafka-connect]
[integration] Add Debezium connector for Change Data Capture [https://github.com/hazelcast/hazelcast-jet-contrib/tree/master/debezium]

2. Enhancements

[pipeline-api] Expose read function on File reader [#1849]
[pipeline-api] Make empty traversers more efficient [#1700]
[pipeline-api] Update default parallelism of map/cache sources and sinks to 1 [#1774]
[pipeline-api] Introduce ability to add Jars in ZIP files as job resources [#1681]