@@ -3,6 +3,7 @@ License, except following modules:
  * hazelcast-jet-spring
  * hazelcast-jet-cdc-debezium
  * hazelcast-jet-cdc-mysql
+ * hazelcast-jet-cdc-postgres
 
 These exceptions and all other artifacts in this distribution are
 released under Apache License 2.0.
