@@ -1,8 +1,8 @@
 ** Hazelcast Jet 4.2 **
 
-* Generic Debezium-Jet connector and its MySQL version have been wrapped
-  with a proprietary API to make them more convenient to use and more
-  production-ready.
+* Generic Debezium-Jet connector and its MySQL & Postgres versions have
+  been wrapped with a proprietary API to make them more convenient to
+  use and more production-ready.
 
 ** Hazelcast Jet 4.1 **
 
